fixed spacing issues

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -110,6 +110,7 @@
     width: 100%;
     cursor: pointer;
     transition: 0.3s;
+    margin: 0;
 }
 .projects .button2 {
     background-color: #f5f5f7;
